# hackathon2-todo-app

./: .gitignore  kill_port_8000.bat
.claude/agents/: fullstack-developer.yaml
.claude/skills/: cloud-native-k8s-deployer.md  event-driven-dapr-orchestrator.md  mcp-tool-server-architect.md  multi-tenant-auth-bridge.md  rag-chatbot.md  skill-better-auth.md
.spec-kit/: plan_phase_3.md
.specify/memory/: constitution.md
phase-I/: README.md  pyproject.toml
phase-I/tests/integration/: test_cli_flows.py
phase-I/tests/unit/: test_formatter.py  test_task_manager.py
phase-II/: README.md  oauth_test_results.md  package.json  test_oauth_errors_practical.py  verify_auth_fix.js
phase-II/backend/: .env  README.md  main.py  models.py  pyproject.toml
phase-II/frontend/: package-lock.json  package.json
phase-III/: AUTH_FIXES_SUMMARY.md  CLAUDE.md  data-model.md  quickstart.md  test_auth_flow.py  test_oauth_errors.py  test_oauth_fix.py  test_password_reset.py  test_realtime_updates.py  test_realtime_updates_ascii.py
phase-III/.spec-kit/: tasks_phase_3.md
phase-III/backend/: .gitignore  CLAUDE.md  DOCKER_README.md  README.md  chat_logic.py  db.py  main.py  pyproject.toml  websocket_manager.py
phase-III/backend/routes/: auth.py  chat.py  notifications.py  tasks.py
phase-III/backend/src/api/: main.py
phase-III/backend/src/api/routes/: auth.py
phase-III/backend/src/models/: task.py
phase-III/frontend/: package.json
phase-IV/: .dockerignore  AUTH_FIXES_SUMMARY.md  OAUTH_ERROR_TESTS_README.md  PRODUCTION-DEPLOYMENT.md  README-k8s.md  README.md  TASK_REALTIME_UPDATES_FIX.md  TROUBLESHOOTING.md  constitution-check.md  deploy-local.sh  deploy-prod.sh  docker-compose.prod.yml  oauth_final_report.md  research.md  test_auth_flow_complete.py  test_oauth_errors_practical_no_unicode.py
phase-IV/.spec-kit/: plan_1-todo-ai-chatbot.md  plan_2-k8s-deployment.md  plan_phase_3.md
phase-IV/backend/: .dockerignore  DOCKER_README.md  (+12 more)
(+130 files in other folders)
